# air_base

./: README.md
air_description/: CMakeLists.txt  package.xml
air_description/launch/: visualize_robot.launch.py
air_description/robot/: kinova.urdf.xacro  kortex_robot.xacro
air_moveit_config/: CMakeLists.txt  package.xml
air_moveit_config/config/: gen3.srdf  ompl_planning.yaml
air_moveit_config/launch/: kortex_moveit.launch.py
air_moveit_config/src/: kinova_planning_scene.cpp
